<resources>
    <string name="app_name">SendIt</string>
    <string name="password">password</string>
    <string name="password_should_be_in_letters">password_should_be_in_letters</string>
    <string name="log_in">Log in</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_it">SendIt</string>
    <string name="log_In">Log In</string>
    <string name="sign_Up">Sign Up</string>
    <string name="to_do">TODO</string>
    <string name="title_activity_message">message</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_number">Number</string>
    <string name="_name">Name</string>
</resources>