<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/to_do" />
    <TextView
        android:id="@+id/send_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/send_it"
        android:textSize="40sp" />
    <Button
        android:id="@+id/log_in"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/log_In"
        android:textSize="23sp"
        android:background="@drawable/button" />
    <Button
        android:id="@+id/sign_up"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_below="@id/log_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/sign_Up"
        android:textSize="23sp" />

</RelativeLayout>
