<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="40sp"
        android:fontFamily="sans-serif-black"
        android:text="Email"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/InputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:ems="16"
        android:inputType="textEmailAddress" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="40sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/password"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:ems="16"
        android:inputType="textPassword" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="40sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/confirm_password"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/InputPassconf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="16"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:inputType="textPassword" />
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50sp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:background="@drawable/button"/>

</LinearLayout>